# gitlab-fsspec

./: .env.test.template  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gitlab_fsspec/: __init__.py  gitlab.py  gitlab_old.py
tests/: __init__.py  conftest.py  test_auth.py  test_basic.py  test_private_repo.py  test_url_parsing.py
